# beamtrace

./: .gitignore  Cargo.toml  README.md
book/: Cargo.toml  README.md
book/src/: geometry.rs  lib.rs
plot/: Cargo.toml  README.md
plot/examples/: averaging_kernels.rs
plot/src/: clip.rs  homography.rs  lib.rs  maps.rs  plot.rs  text.rs
src/: bresenham.rs  charset0.rs  font.rs  geometry.rs  homography.rs  lib.rs  main.rs  plot.rs  render_book.rs  show_book.rs  text.rs
