[package]
name = "beamtrace"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "MIT OR APACHE-2.0"
readme = "README.md"
description = "Representation of multi-page line plots"
repository = "https://github.com/berke/beamtrace"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
beamtrace = { path = "../beamtrace" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
# clap = { version = "^2.33" }
ndarray = { version = "^0.14" }
ndarray-linalg = { version = "^0.12" }
ndarray-image = { version = "^0.3" }
image = { version = "^0.23" }
# log = { version = "^0.4" }
# simple_logger = { version = "^1.10" }
# wav = { version = "^0.5" }
# dft = { version = "^0.5" }
# hdf5 = { version = "^0.7" }
# rayon = { version = "^1.5" }
num-complex = { version = "^0.1" }
num-traits = { version = "^0.2" }
# rand = { version = "^0.5" }

[[bin]]
name = "show_book"
path = "src/show_book.rs"

[[bin]]
name = "render_book"
path = "src/render_book.rs"
