[package]
name = "beamtrace"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "Plotter"
repository = "https://github.com/berke/beamplot"

[workspace]
members = [".","book","plot"]

[dependencies]
beambook = { path = "book", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
ndarray = { version = "^0.14" }
ndarray-image = { version = "^0.3" }

[[bin]]
name = "show_book"
path = "src/show_book.rs"

[[bin]]
name = "render_book"
path = "src/render_book.rs"
