[package]
name = "beambook"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "MIT OR APACHE-2.0"
readme = "README.md"
description = "Representation of multi-page line plots"
repository = "https://github.com/berke/beamtrace"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
