[package]
name = "beamplot"
version = "0.1.0"
edition = "2021"
authors = ["Berke DURAK <bd@exhrd.fr>"]
license = "MIT OR APACHE-2.0"
readme = "README.md"
description = "Plotter"
repository = "https://github.com/berke/beamplot"

[dependencies]
beambook = { path = "../book" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }
# clap = { version = "^2.33" }
ndarray = { version = "^0.14" }
ndarray-linalg = { version = "^0.12" }
ndarray-image = { version = "^0.3" }
image = { version = "^0.23" }
num-complex = { version = "^0.1" }
num-traits = { version = "^0.2" }
# rand = { version = "^0.5" }